[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Cell.gd" type="Script" id=1]
[ext_resource path="res://assets/Sq.png" type="Texture" id=2]
[ext_resource path="res://assets/8bitoperator.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 75
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Cell" type="Control"]
anchor_left = 0.444
anchor_top = 0.444
anchor_right = 0.556
anchor_bottom = 0.556
margin_left = 0.455963
margin_top = 0.455963
margin_right = -0.456055
margin_bottom = -0.456055
rect_min_size = Vector2( 114, 114 )
focus_mode = 1
mouse_default_cursor_shape = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0.478431, 0, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="Hover_Highlight" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 0.298039, 0.631373, 0.615686, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select_Highlight" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 0.458824, 0.819608, 0.745098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notes" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -57.0
margin_right = 57.0
margin_bottom = 57.0
rect_min_size = Vector2( 114, 114 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3

[node name="1" type="Label" parent="Notes"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 38.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
size_flags_horizontal = 5
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1

[node name="2" type="Label" parent="Notes"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 38.0
margin_right = 76.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
custom_fonts/font = SubResource( 1 )
text = "2"
align = 1
valign = 1

[node name="3" type="Label" parent="Notes"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 76.0
margin_right = 114.0
margin_bottom = 38.0
rect_min_size = Vector2( 38, 38 )
custom_fonts/font = SubResource( 1 )
text = "3"
align = 1
valign = 1

[node name="4" type="Label" parent="Notes"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 38.0
margin_right = 38.0
margin_bottom = 76.0
rect_min_size = Vector2( 38, 38 )
custom_fonts/font = SubResource( 1 )
text = "4"
align = 1
valign = 1

[node name="5" type="Label" parent="Notes"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 38.0
margin_top = 38.0
margin_right = 76.0
margin_bottom = 76.0
rect_min_size = Vector2( 38, 38 )
custom_fonts/font = SubResource( 1 )
text = "5"
align = 1
valign = 1

[node name="6" type="Label" parent="Notes"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 76.0
margin_top = 38.0
margin_right = 114.0
margin_bottom = 76.0
rect_min_size = Vector2( 38, 38 )
custom_fonts/font = SubResource( 1 )
text = "6"
align = 1
valign = 1

[node name="7" type="Label" parent="Notes"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 76.0
margin_right = 38.0
margin_bottom = 114.0
rect_min_size = Vector2( 38, 38 )
custom_fonts/font = SubResource( 1 )
text = "7"
align = 1
valign = 1

[node name="8" type="Label" parent="Notes"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 38.0
margin_top = 76.0
margin_right = 76.0
margin_bottom = 114.0
rect_min_size = Vector2( 38, 38 )
custom_fonts/font = SubResource( 1 )
text = "8"
align = 1
valign = 1

[node name="9" type="Label" parent="Notes"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 76.0
margin_top = 76.0
margin_right = 114.0
margin_bottom = 114.0
rect_min_size = Vector2( 38, 38 )
custom_fonts/font = SubResource( 1 )
text = "9"
align = 1
valign = 1

[node name="Solution" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -57.0
margin_right = 57.0
margin_bottom = 57.0
rect_min_size = Vector2( 114, 114 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_Cell_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Cell_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_Cell_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Cell_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Cell_mouse_exited"]
